--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 
 <head>
+     <!-- Compiled and minified JavaScript -->
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -33,8 +35,8 @@
         <h1>Fuzzy Feelings</h1>
         <div class="row">
             <div class="row">
-                <div class="col s12">
-                    <img class="served-gif" src="purrfect.gif" alt="motivational cat gif">
+                <div id="main-image-div" class="col s12 main-image-div-class">
+                    <img id="main-image" class="served-gif" src="purrfect.gif" alt="motivational cat gif">
                 </div>
                 <div class="col s12"><p>Click a button to get a new meme!</p></div>
                 <div id="motivational-button" class="col s6">
@@ -67,9 +69,10 @@
         <p>This is a link to developer contact info</p>
     </div>
     <footer>Fuzzy Feelings &#169 2020</footer>
+    <script>
+        // javascript here
+    </script>
 
-    <!--JavaScript at end of body for optimized loading-->
-    <script type="text/javascript" src="js/materialize.min.js"></script>
 </body>
 
 </html>
