media query responsive changes

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
                 <div class="col s12">
                     <p>Click a button to get a new meme!</p>
                 </div>
-                <div id="motivational-button" class="col s6">
-                    <button class="waves-effect waves-light btn-large" width="100px">new motivational</button>
-                </div>
-                <div id="animal-button" class="col s6">
-                    <button class="waves-effect waves-light btn-large" width="100px">new animal</button>
+                <div class= "btn-duet">
+                    <div id="motivational-button" class="col s6">
+                        <button class="waves-effect waves-light btn-large" width="100px">Motivation</button>
+                    </div>
+                    <div id="animal-button" class="col s6">
+                        <button class="waves-effect waves-light btn-large" width="100px">Animal</button>
+                    </div>
                 </div>
                 </br>
             </div>
