changed materalize buttons + got rid of one button

--- a/index.html
+++ b/index.html
@@ -48,22 +48,19 @@
                 </div>
                 <div class= "btn-duet">
                     <div id="motivational-button" class="col s6">
-                        <button id = "motive" class="waves-effect waves-light btn-large" width="100px">Motivation</button>
+                        <button id = "motive" class="FFbutton" width="100px">Motivation</button>
                     </div>
                     <div id="animal-button" class="col s6">
-                        <button id= "animal" class="waves-effect waves-light btn-large" width="100px">Animal</button>
+                        <button id= "animal" class="FFbutton" width="100px">Animal</button>
                     </div>
                 </div>
                 </div>
                 </br>
             </div>
-            <div id="not-cute-button" class="col s12">
-                <button id="random" class="waves-effect waves-light btn-small">Not cute enough? Try again!</button>
-                </div>
         </div>
     </main>
     <div id="settings">
-        <h3>Default Settings:</h3>
+        <h4>Default Settings:</h4>
         <p>Which do you prefer on refresh?</p>
         <form action="#">
             <p>
