--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="Assets/style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
+    <title>Fuzzy Feelings</title>
     
 
 </head>
@@ -41,9 +42,9 @@
         <div class="row">
             <div class="row">
                 <div id="main-image-div" class="col s12 main-image-div-class">
-                    <img id="main-image" class="served-gif" src="purrfect.gif" alt="motivational cat gif">
+                    <img id="main-image" class="served-gif" src="Assets/purrfect.gif" alt="motivational cat gif">
                 </div>
-                <div class="col s12">
+                <div class="col s12 meme">
                     <p>Click a button to get a new meme!</p>
                 </div>
                 <div class= "btn-duet">
@@ -65,7 +66,7 @@
         <form action="#">
             <p>
                 <label>
-                    <input name="group1" type="radio" />
+                    <input id= radioM name="group1" type="radio" />
                     <span>Motivational</span>
                     <input name="group1" type="radio" />
                     <span>Animal</span>
@@ -76,7 +77,7 @@
         </form>
     </div>
     <div id="contact">
-        <p>This is a link to developer contact info</p>
+        <a class= "creators" href= "https://github.com/penguinorange/fuzzy_feelings.git" target= "_blank">Meet the creators!</a>
     </div>
     <footer>Fuzzy Feelings &#169 2020</footer>
 
@@ -89,7 +90,7 @@
 
     </script>
 <script src="https://code.jquery.com/jquery.js"></script>
-<script type="text/javascript" src="giphyAPI.js"></script>
+<script type="text/javascript" src="Assets/giphyAPI.js"></script>
 </body>
 
 </html>
