added local storage function to setting, added name and value properties to input elements

--- a/index.html
+++ b/index.html
@@ -12,12 +12,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="Assets/style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
-<<<<<<< HEAD
     <title>Fuzzy Feelings</title>
     
 
-=======
->>>>>>> c89d7856411315e9477b04efd5bdfcfbe5e677cb
 </head>
 <header>
     <nav>
@@ -67,34 +64,19 @@
         
         <h4>Default Settings:</h4>
         <p>Which do you prefer on refresh?</p>
-<<<<<<< HEAD
-        <form action="#">
-            <p>
-                <label>
-                    <input id= radioM name="group1" type="radio" />
-                    <span>Motivational</span>
-                    <input name="group1" type="radio" />
-                    <span>Animal</span>
-                    <input name="group1" type="radio" checked />
-                    <span>Either</span>
-                </label>
-            </p>
-        </form>
-=======
         <label class="radio-container">
-            <input id="radio-default" type="radio" checked name="radio">
+            <input id="radio-default" type="radio" checked name="radio" value="default">
             <span >Default</span>
         </label>  
         <label class="radio-container">
-          <input id="radio-motivational" type="radio" name="radio">
+          <input id="radio-motivational" type="radio" name="radio" value="motivational">
           <span >Motivational</span>
         </label>
         <label class="radio-container">
-          <input id="radio-animal" type="radio" name="radio">
+          <input id="radio-animal" type="radio" name="radio" value="animal">
           <span >Animal</span>
         </label>
 
->>>>>>> c89d7856411315e9477b04efd5bdfcfbe5e677cb
     </div>
     <div id="contact">
         <a class= "creators" href= "https://github.com/penguinorange/fuzzy_feelings.git" target= "_blank">Meet the creators!</a>
